--- a/index.html
+++ b/index.html
@@ -8,30 +8,41 @@
   <body>
     <div class="header">
       <h1>Broadway Design</h1>
-      <p><a href="#home">Home</a></p>
-      <p><a href="#about">About</a></p>
-      <p><a href="#work">Work</a></p>
-      <p><a href="#team">Team</a></p>
-      <p><a href="#contact">Contact</a></p>
+      <p><a class="cta" href="#home">Home</a></p>
+      <p><a class="cta" href="#about">About</a></p>
+      <p><a class="cta" href="#work">Work</a></p>
+      <p><a class="cta" href="#team">Team</a></p>
+      <p><a class="cta" href="#contact">Contact</a></p>
     </div>
-    <h1>Our Process</h1>
-
-    <h2>Identify</h2>
-    <h3>We focus on the most important details.</h3>
-
-    <h2>Understand</h2>
-    <h3>We study our project inside and out.</h3>
-
-    <h2>Execute</h2>
-    <h3>We put everything we have into our work.</h3>
-
-    <h2>Portfolio</h2>
-    <h3>Coming Soon</h3>
-    <h2>Team</h2>
-    <h3>We're Hiring</h3>
-    <h2>Contact</h2>
-    <h3>Phone: (555)-555-5555</h3>
-    <h3>E-mail: test@example.com</h3>
-    <h3>Twitter: @test</h3>
+    <h2>Our Process</h2>
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"></p>
+    <h3>Identify</h3>
+    <h4>We focus on the most important details.</h4>
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"></p>
+    <h3>Understand</h3>
+    <h4>We study our project inside and out.</h4>
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"></p>
+    <h3>Execute</h3>
+    <h4>We put everything we have into our work.</h4>
+    <div class="header">
+      <h3>Designed in New York</h3>
+    </div>
+    <h3>Portfolio</h3>
+    <h4>Coming Soon</h4>
+    <h3>Team</h3>
+    <h4>We're Hiring</h4>
+    <h3>Contact</h3>
+    <h4>Phone: (555)-555-5555</h4>
+    <h4>E-mail: test@example.com</h4>
+    <h4>Twitter: @test</h4>
+    <div class="footer">
+      <p>&copy; Broadway 2017
+      <a class="foot" href="home">Home</a>
+      <a class="foot" href="about">About</a>
+      <a class="foot" href="work">Work</a>
+      <a class="foot" href="team">Team</a>
+      <a class="foot" href="contact">Contact</a>
+    </p>
+    </div>
   </body>
 </html>
