--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="header">
       <h1>Broadway Design</h1>
-      <p><a class="cta" href="#home">Home</a></p>
-      <p><a class="cta" href="#about">About</a></p>
-      <p><a class="cta" href="#work">Work</a></p>
-      <p><a class="cta" href="#team">Team</a></p>
-      <p><a class="cta" href="#contact">Contact</a></p>
+      <p><a class="cta" id="home">Home</a></p>
+      <p><a class="cta" id="about">About</a></p>
+      <p><a class="cta" id="work">Work</a></p>
+      <p><a class="cta" id="team">Team</a></p>
+      <p><a class="cta" id="contact">Contact</a></p>
     </div>
     <h2>Our Process</h2>
     <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"></p>
@@ -37,11 +37,11 @@
     <h4>Twitter: @test</h4>
     <div class="footer">
       <p>&copy; Broadway 2017
-      <a class="foot" href="home">Home</a>
-      <a class="foot" href="about">About</a>
-      <a class="foot" href="work">Work</a>
-      <a class="foot" href="team">Team</a>
-      <a class="foot" href="contact">Contact</a>
+      <a class="foot" href="#home" >Home</a>
+      <a class="foot" href="#about">About</a>
+      <a class="foot" href="#work">Work</a>
+      <a class="foot" href="#team">Team</a>
+      <a class="foot" href="#contact">Contact</a>
     </p>
     </div>
   </body>
